<resources>
    <string name="app_name">Aplikacja do rozliczania wydatków</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_name">Nazwa grupy</string>
    <string name="group_descr">Opis</string>
    <string name="payer_paid">%s zapłacił(a)</string>
    <string name="person_count">%d osób</string>
    <string name="total_spent">%.2f zł łącznie</string>
    <string name="group_created">Utworzono: %s</string>
    <string name="money_format">%.2f zł</string>
    <string name="how_much">Ile?</string>
    <string name="for_what">Za co?</string>
    <string name="save">Zapisz</string>
    <string name="currency">zł</string>
    <string name="date_added">Dodano: %s</string>
    <string name="who_paid">Kto?</string>
    <string name="i_paid">Zapłaciłem(am)</string>
    <string name="payment">Spłata</string>
    <string name="for_whom">Za kogo?</string>
    <string name="when">Kiedy?</string>
    <string name="new_expense_title">Nowy wydatek</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="mark_as_paid">Oznacz wybrane jako zapłacone</string>
    <string name="me">Ja</string>
    <string name="no_expenses">Brak wydatków</string>
    <string name="add_people_first">Najpierw dodaj do grupy co najmniej jedną osobę</string>
    <string name="no_debts">Tutaj pojawi się lista długów</string>
    <string name="debts_settled">Wszystkie długi są rozliczone</string>
    <string name="details">Szczegóły</string>
    <string name="no_groups">Brak grup</string>
    <string name="use_button_below">Użyj przycisku na dole, aby dodać</string>
</resources>
